# WeatherCompass

./: CMakeLists.txt  Main.qml  controller.cpp  controller.h  main.cpp
CitiesInformation/: CMakeLists.txt  EnumConverter.h  citydata.cpp  citydata.h  citydatamodel.cpp  citydatamodel.h  citydataparser.cpp  citydataparser.h  resources.qrc
